Replace MoneyHelper disclaimer
Replaces the MH disclaimer with the latest approved version.

--- a/app/views/appointment_mailer/confirmation.html.erb
+++ b/app/views/appointment_mailer/confirmation.html.erb
@@ -14,4 +14,4 @@
 
 <%= render 'shared/email/preparing_for_appointment' %>
 
-<%= render 'shared/email/money_helper', full_detail: true %>
+<%= render 'shared/email/money_helper' %>
