--- a/app/views/appointment_mailer/reminder.text.erb
+++ b/app/views/appointment_mailer/reminder.text.erb
@@ -8,4 +8,4 @@ This is a reminder that you have a <%= @appointment.type %> appointment booked f
 
 <%= render 'shared/email/preparing_for_appointment' %>
 
-<%= render 'shared/email/money_helper', full_detail: true %>
+<%= render 'shared/email/money_helper' %>
