--- a/app/views/appointment_mailer/updated.text.erb
+++ b/app/views/appointment_mailer/updated.text.erb
@@ -7,4 +7,4 @@ Your appointment details have been updated.
 <%= render 'shared/email/appointment_details' %>
 
 <%= render 'shared/email/preparing_for_appointment' %>
-<%= render 'shared/email/money_helper', full_detail: true %>
+<%= render 'shared/email/money_helper' %>
