--- a/app/views/appointment_mailer/confirmation.text.erb
+++ b/app/views/appointment_mailer/confirmation.text.erb
@@ -6,4 +6,4 @@ Thank you for booking a <%= @appointment.type %> appointment.
 
 <%= render 'shared/email/appointment_details' %>
 <%= render 'shared/email/preparing_for_appointment' %>
-<%= render 'shared/email/money_helper', full_detail: true %>
+<%= render 'shared/email/money_helper' %>
