Shorten 'processing' button text
This makes better use of the space and is consistent with the other
buttons.

--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -42,9 +42,9 @@
   </div>
   <div class="col-md-5 action-buttons">
     <% if can_process?(current_user, @appointment) %>
-      <%= link_to appointment_process_path(@appointment), method: :post, title: 'Mark as Processed', class: 'btn btn-info t-process' do %>
+      <%= link_to appointment_process_path(@appointment), method: :post, title: 'Process', class: 'btn btn-info t-process' do %>
         <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
-        <span>Mark as Processed</span>
+        <span>Process</span>
       <% end %>
     <% end %>
     <% if @appointment.can_create_summary? %>
