Leverage casebook's rescheduling API instead
Casebook has removed the need for us to cancel and re-push an
appointment when it is rescheduled at our end. Instead we can leverage
their rescheduling API and this ensures only one customer record is
created in casebook, any further appointments booked will reference this
record.

--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -65,7 +65,7 @@
           <div class="form-group">
             <div class="radio">
               <label>
-                <input class="t-customer-rescheduled" type="radio" value="customer_rescheduled" name="rescheduling_reason" id="customer_rescheduled"> Customer rescheduled
+                <input class="t-client-rescheduled" type="radio" value="client_rescheduled" name="rescheduling_reason" id="client_rescheduled"> Client rescheduled
               </label>
             </div>
             <div class="radio">
