--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -5,6 +5,10 @@
 ) %>
 
 <h4>
+  <% if @appointment.nudged? %>
+    <span class="label label-default t-nudged">Nudged</span>
+  <% end %>
+
   <% if @appointment.due_diligence? %>
     <span class="label label-default t-due-diligence-banner">PSG</span>
   <% end %>
