--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -74,12 +74,12 @@
         <td class="appointment-search-results__item"><b class="visible-xs-block">Created</b><%= result.created_at %></td>
         <td class="appointment-search-results__item"><b class="visible-xs-block">Status</b><%= result.status %> <%= processed_tick(result) %></td>
         <td class="appointment-search-results__item" nowrap="true">
-          <%= link_to edit_appointment_path(result), title: 'Edit appointment', class: 'btn btn-info' do %>
+          <%= link_to edit_appointment_path(result), title: 'Edit appointment', class: 'btn btn-info t-edit' do %>
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             <span class="sr-only">Edit appointment</span>
           <% end %>
           <% if result.can_be_rescheduled_by?(current_user) %>
-            <%= link_to appointment_reschedule_path(result), title: 'Reschedule appointment', class: 'btn btn-info' do %>
+            <%= link_to appointment_reschedule_path(result), title: 'Reschedule appointment', class: 'btn btn-info t-reschedule' do %>
               <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
               <span class="sr-only">Reschedule appointment</span>
             <% end %>
