Display nudge eligibility
Displays this banner when the customer is under 50 and nudged.

--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -6,7 +6,11 @@
 
 <h4>
   <% if display_nudge_banner?(@appointment, current_user) %>
-    <span class="label label-default t-nudged">Nudged</span>
+    <span class="label label-default t-nudged">Nudged</span></span>
+  <% end %>
+
+  <% if display_nudge_eligibility?(@appointment) %>
+    <span class="label label-default t-nudged-eligibility"><%= nudge_banner_text(@appointment) %></span>
   <% end %>
 
   <% if @appointment.due_diligence? %>
