Allow TPAS agents to filter availability
Hacks in temporary filtering to allow TPAS agents to choose from their
own organisation's or cross-organisation's availability when booking or
rebooking appointments. For rescheduling they only see the availability
of the original guider's organisation.

--- a/app/views/appointments/_availability_calendar.html.erb
+++ b/app/views/appointments/_availability_calendar.html.erb
@@ -5,6 +5,10 @@
 
 <%= render 'shared/nojs' %>
 
+<% if current_user.tpas_agent? && !rescheduling %>
+  <%= form.check_box :all_availability, label: 'Show all availability?', class: 't-all-availability js-all-availability', data: { module: 'all-availability' } %>
+<% end %>
+
 <% if current_user.lloyds_signposter? %>
   <%= form.check_box :lloyds_signposted, label: 'Lloyds Banking Group referral?', class: 't-lloyds-signposted js-lloyds-signposted', disabled: rescheduling, data: { module: 'lloyds-signposter' } %>
 <% end %>
