Allow TPAS agents to resend confirmations

--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -85,7 +85,7 @@
       <span class="glyphicon glyphicon-repeat" aria-hidden="true"></span>
       <span>Rebook</span>
     <% end %>
-    <% if current_user.tp? %>
+    <% if current_user.tp? || current_user.tpas_agent? %>
       <%= link_to appointment_email_confirmation_path(@appointment), title: 'Resend', class: 'btn btn-info t-resend-email-confirmation', method: :post, data: { confirm: 'Resend the appointment confirmation email?' } do %>
         <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
         <span>Resend</span>
