Send an SMS customer exit poll when possible
For BSL customers an exit poll is sent 24 hours after their appointment
is marked completed. This change will send an SMS version of the exit
poll if a mobile number is present, otherwise it will fall back on the
email version of the exit poll.

--- a/app/views/activities/_bsl_customer_exit_poll_activity.html.erb
+++ b/app/views/activities/_bsl_customer_exit_poll_activity.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:activity_message, flush: true) do %>
   <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-  <strong>The system</strong> sent an exit poll email to <strong><%= bsl_customer_exit_poll_activity.appointment.name %></strong>
+  <strong>The system</strong> sent an exit poll to <strong><%= bsl_customer_exit_poll_activity.appointment.name %></strong>
 <% end %>
 <%= render 'activities/activity', activity: bsl_customer_exit_poll_activity, details: details, hide: hide %>
