--- a/app/views/appointments/_availability_calendar.html.erb
+++ b/app/views/appointments/_availability_calendar.html.erb
@@ -5,7 +5,7 @@
 
 <%= render 'shared/nojs' %>
 
-<% if current_user.tpas_agent? && !rescheduling %>
+<% if current_user.tpas_agent? && !rescheduling && @appointment.pension_wise? %>
   <%= form.check_box :internal_availability, label: 'Internal availability', class: 't-internal-availability js-internal-availability', data: { module: 'internal-availability' } %>
 <% end %>
 
