--- a/app/views/appointment_mailer/cancelled.html.erb
+++ b/app/views/appointment_mailer/cancelled.html.erb
@@ -1,5 +1,9 @@
 <h1 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
+  <% if @appointment.hrh_bank_holiday? %>
+    Due to the passing of Her Majesty the Queen and as a mark of respect, we will be closed 19th Sept. Please rebook your appointment. We apologise for any inconvenience
+  <% else %>
   We’ve cancelled your appointment
+  <% end %>
 </h1>
 
 <%= p do %>
