--- a/app/views/appointment_mailer/cancelled.html.erb
+++ b/app/views/appointment_mailer/cancelled.html.erb
@@ -1,6 +1,6 @@
 <h1 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
   <% if @appointment.hrh_bank_holiday? %>
-    Due to the passing of Her Majesty the Queen and as a mark of respect, we will be closed 19th Sept. Please rebook your appointment. We apologise for any inconvenience
+    On 19 September, the Money and Pensions Service will be observing the last day of national mourning and the bank holiday to mark the State Funeral of Her Majesty Queen Elizabeth II. Our customer-facing services will be closed.
   <% else %>
   We’ve cancelled your appointment
   <% end %>
