--- a/app/views/consents/create.html.erb
+++ b/app/views/consents/create.html.erb
@@ -73,7 +73,7 @@ Protection Act 2018.
 </p>
 
 <p>
-Please return the completed form to Pension Wise, PO Box 10404, Ashby de la
-Zouch, Leicestershire, LE65 9EH. Or you can email a scanned copy
-to: contact.pensionwise@moneyhelper.org.uk
+Please return the completed form to Pension Wise Money and Pensions Service,
+120 Holborn, London EC1N 2TD. Or you can email a scanned copy to:
+contact.pensionwise@moneyhelper.org.uk
 </p>
