Ensure allocation respects internal/external
When the TPAS agent checks the internal availability, this preference
must persist all the way through to allocation of the slot.

--- a/app/views/appointments/preview.html.erb
+++ b/app/views/appointments/preview.html.erb
@@ -13,6 +13,7 @@
 
 <%= form_for @appointment, layout: :basic do |f| %>
   <%= hidden_field_tag :scheduled, calendar_scheduling? %>
+  <%= f.hidden_field :internal_availability %>
   <%= f.hidden_field :rebooked_from_id %>
   <%= f.hidden_field :date_of_birth %>
   <%= f.hidden_field :start_at %>
