--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -15,7 +15,7 @@
         :date_range,
         class: 't-date-range appointment-search__date-range form-control',
         use_label: false,
-        placeholder: 'Appointment date range',
+        placeholder: '3 months ago to 1 month from now',
         readonly: true,
         data: {
           module: 'date-range-picker',
