--- a/app/views/consents/create.html.erb
+++ b/app/views/consents/create.html.erb
@@ -10,26 +10,25 @@ disclose your information, e.g. for safeguarding.
 
 <p>
 Pension Wise is a free and impartial government service which helps you
-understand your defined contribution pension options. Pension
-Wise telephone appointments are delivered by the Money and Pensions Service,
-Citizens Advice England and Wales and Citizens Advice Scotland.
+understand your defined contribution pension options. Pension Wise appointments
+are delivered by the Money and Pensions Service, Citizens Advice England and
+Wales and Citizens Advice Scotland.
 </p>
 
 <p>
 During a Pension Wise guidance appointment, questions will be asked about your
 personal and family affairs, financial arrangements and plans and general state
-of health to inform the options we run through with you.
+of health to inform the options we run through.
 </p>
 
 <p>
 Your personal data will be securely stored by Pension Wise and our delivery
-partners to monitor quality of service and respond to queries and
-complaints. The call will be recorded and stored securely for a period of 2
-years.<% if @appointment.cas_guider? %> We will also keep a written record of the appointment for 6 years.<% end %>
+partners to monitor quality of service and respond to queries and complaints.
+The call will be recorded and stored securely for a period of 6 years.
 </p>
 
 <p>
-  <strong>Before we can deliver an appointment to discuss your pension options, we need your authority.</strong>
+  <strong>Before we can deliver an appointment to discuss your pension options, we need your authority</strong>
 </p>
 
 <h4>Your details</h4>
@@ -64,16 +63,18 @@ consent before the appointment by contacting Pension Wise.
 <p>
 By signing this form, you are giving us consent to collect, store, and use your
 personal data for the purposes outlined in our privacy policy
-moneyhelper.org.uk/privacy
-</p>
-
-<p>
-Your personal information will be processed in accordance with the Data
-Protection Act 2018.
+moneyhelper.org.uk/privacy. Your personal information will be processed in
+accordance with the Data Protection Act 2018.
 </p>
 
 <p>
 Please return the completed form to Pension Wise Money and Pensions Service,
 120 Holborn, London EC1N 2TD. Or you can email a scanned copy to:
-contact.pensionwise@moneyhelper.org.uk
+contact.pensionwise@moneyhelper.org.uk. If your appointment will be delivered
+face to face then you can bring the form to the appointment.
+</p>
+
+<p>
+Please note that the appointment will not be able to go ahead unless the
+guidance specialist delivering your appointment has seen this signed document.
 </p>
