Add the driver safety messaging to customer email

--- a/app/views/shared/email/_preparing_for_appointment.text.erb
+++ b/app/views/shared/email/_preparing_for_appointment.text.erb
@@ -1,3 +1,9 @@
+Road Safety
+
+In the interest of road safety we will not deliver a an appointment if you are
+driving. This also includes the use of hands-free devices. Please ensure you
+are not driving at the time of your appointment.
+
 Preparing for your appointment
 
 To make the most of your appointment it would be helpful if you know:
