Update BSL exit poll notifications

--- a/app/views/appointment_mailer/bsl_customer_exit_poll.text.erb
+++ b/app/views/appointment_mailer/bsl_customer_exit_poll.text.erb
@@ -2,10 +2,11 @@ We’d appreciate your feedback
 
 Dear <%= @appointment.first_name %>,
 
-You recently had a Pension Wise appointment with <%= @appointment.guider.name %> on <%= @appointment.start_at.to_date.to_s(:govuk_date) %>.
+You recently had a Pension Wise BSL video appointment on <%= @appointment.start_at.to_date.to_s(:govuk_date) %>.
 
-This is a new service and we’d appreciate your feedback on how it went:
+We'd appreciate your feedback on the interpreter service you received. You also
+have the option of sending video feedback:
+https://actiondeafness.org.uk/feedback-form
 
-https://www.pensionwise.gov.uk/bsl-exit-poll
-
-The information you provide on this feedback form will be shared with our Pension Wise partners for service improvement.
+The information you provide on this feedback form will be shared with our
+Pension Wise partners for service improvement.
