--- a/app/views/appointment_mailer/bsl_customer_exit_poll.html.erb
+++ b/app/views/appointment_mailer/bsl_customer_exit_poll.html.erb
@@ -7,15 +7,11 @@
 <% end %>
 
 <%= p do %>
-  You recently had a Pension Wise appointment with <%= @appointment.guider.name %> on <%= @appointment.start_at.to_date.to_s(:govuk_date) %>.
+  You recently had a Pension Wise BSL video appointment on <%= @appointment.start_at.to_date.to_s(:govuk_date) %>.
 <% end %>
 
 <%= p do %>
-  This is a new service and we’d appreciate your feedback on how it went:
-<% end %>
-
-<%= p do %>
-  <a href="https://www.pensionwise.gov.uk/bsl-exit-poll">www.pensionwise.gov.uk/bsl-exit-poll</a>
+  We'd appreciate your feedback on the interpreter service you received. You also have the option of sending video feedback: <a href="https://actiondeafness.org.uk/feedback-form/">actiondeafness.org.uk/feedback-form</a>.
 <% end %>
 
 <%= p do %>
