--- a/app/views/shared/email/_appointment_details.html.erb
+++ b/app/views/shared/email/_appointment_details.html.erb
@@ -68,6 +68,10 @@
   <% end %>
 
   <%= p do %>
+    Our team are here to help you, please treat them with respect. If you are verbally abusive toward them, they have the right to end the call and you may have to rebook.
+  <% end %>
+
+  <%= p do %>
     <strong>
       If you miss the call, you’ll need to book another appointment.
     </strong>
