Correct configuration for date ranges
This needed tweaking to ensure the correct dates are selected and
persisted through to the underlying textbox when hitting the 'apply'
button.

--- a/app/views/appointments/search.html.erb
+++ b/app/views/appointments/search.html.erb
@@ -21,7 +21,7 @@
           module: 'date-range-picker',
           config: {
             autoUpdateInput: false,
-            autoApply: true,
+            autoApply: false,
             locale: {
               cancelLabel: 'Clear',
               format: 'DD/MM/YYYY'
