Ensure schedule date is formatted correctly
This regressed from the appointment search change.

--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -22,6 +22,9 @@
           data: {
             module: 'date-range-picker',
             config: {
+              locale: {
+                format: 'D MMM YYYY'
+              },
               singleDatePicker: true,
               showDropdowns: true
             }
