--- a/app/views/shared/email/_preparing_for_appointment.html.erb
+++ b/app/views/shared/email/_preparing_for_appointment.html.erb
@@ -3,7 +3,7 @@
 </h2>
 
 <%= p do %>
-  In the interest of road safety we will not deliver a an appointment if you are driving. This also includes the use of hands-free devices. Please ensure you are not driving at the time of your appointment.
+  In the interest of road safety we will not deliver an appointment if you are driving. This also includes the use of hands-free devices. Please ensure you are not driving at the time of your appointment.
 <% end %>
 
 <h2 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 18px;line-height: 1.111111111;padding: 15px 0;">
