--- a/app/views/shared/email/_preparing_for_appointment.text.erb
+++ b/app/views/shared/email/_preparing_for_appointment.text.erb
@@ -1,6 +1,6 @@
 Road Safety
 
-In the interest of road safety we will not deliver a an appointment if you are
+In the interest of road safety we will not deliver an appointment if you are
 driving. This also includes the use of hands-free devices. Please ensure you
 are not driving at the time of your appointment.
 
