--- a/app/views/consents/create.html.erb
+++ b/app/views/consents/create.html.erb
@@ -68,10 +68,11 @@ accordance with the Data Protection Act 2018.
 </p>
 
 <p>
-Please return the completed form to Pension Wise Money and Pensions Service,
-120 Holborn, London EC1N 2TD. Or you can email a scanned copy to:
-contact.pensionwise@moneyhelper.org.uk. If your appointment will be delivered
-face to face then you can bring the form to the appointment.
+Please return the completed form to Money and Pensions Service, Pension Wise
+(MoneyHelper), Borough Hall, 138 Cauldwell Street, Bedford, MK42 9AP. Or you
+can email a scanned copy to: contact.pensionwise@moneyhelper.org.uk. If your
+appointment will be delivered face to face then you can bring the form to the
+appointment.
 </p>
 
 <p>
