--- a/app/views/appointment_mailer/adjustment.html.erb
+++ b/app/views/appointment_mailer/adjustment.html.erb
@@ -10,6 +10,12 @@
   </h1>
 <% end %>
 
+<% if !@appointment.dc_pot_confirmed? %>
+  <h1 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
+    The customer has indicated that they are unsure if they have a DC pension
+  </h1>
+<% end %>
+
 <%= p do %>
   Reference number:
   <br>
