Send adjustment for duplicated appointments
For non-ops appointments, upon creation we now send an 'adjustment' so
signal this appointment may have duplicates.

--- a/app/views/appointment_mailer/adjustment.html.erb
+++ b/app/views/appointment_mailer/adjustment.html.erb
@@ -16,6 +16,12 @@
   </h1>
 <% end %>
 
+<% if @appointment.potential_duplicates? %>
+  <h1 style="color: #0F19A0 !important;font-family: Calibri, Arial, sans-serif;margin: 15px 0;font-weight: 700;font-size: 20px;line-height: 1.111111111;padding: 15px 0;">
+    The appointment has been identified as a potential duplicate booking
+  </h1>
+<% end %>
+
 <%= p do %>
   Reference number:
   <br>
