--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -55,7 +55,7 @@
         <span>Process</span>
       <% end %>
     <% end %>
-    <% if @appointment.can_create_summary?(current_user) %>
+    <% if @appointment.can_create_summary? %>
       <%= link_to SummaryDocumentLink.generate(@appointment), title: 'Create summary', class: 'btn btn-info', target: '_blank', data: summary_prompt_data(@appointment) do %>
         <span class="glyphicon glyphicon-print" aria-hidden="true"></span>
         <span>Create Summary</span>
