--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -5,6 +5,10 @@
 ) %>
 
 <h4>
+  <% if @appointment.welsh? %>
+    <span class="label label-default t-welsh-appointment">Welsh Language Appointment</span></span>
+  <% end %>
+
   <% if @appointment.nudged? %>
     <span class="label label-default t-nudged">Nudged</span></span>
   <% end %>
