--- a/app/views/appointment_mailer/cancelled.text.erb
+++ b/app/views/appointment_mailer/cancelled.text.erb
@@ -13,10 +13,10 @@ We have cancelled the following phone appointment as requested:
 <% end %>
 
 Date:
-<%= @appointment.start_at.to_date.to_s(:govuk_date) %>
+<%= @appointment.start_at.to_date.to_formatted_s(:govuk_date) %>
 
 Time:
-<%= "#{@appointment.start_at.to_time.to_s(:govuk_time)} (#{@appointment.timezone})" %>
+<%= "#{@appointment.start_at.to_time.to_formatted_s(:govuk_time)} (#{@appointment.timezone})" %>
 
 Reference number:
 <%= @appointment.id %>
