--- a/app/views/appointment_mailer/guider_status_reminder.html.erb
+++ b/app/views/appointment_mailer/guider_status_reminder.html.erb
@@ -14,7 +14,7 @@
   Date:
   <br>
   <strong class="emphasize">
-    <%= @appointment.start_at.to_date.to_s(:govuk_date) %>
+    <%= @appointment.start_at.to_date.to_fs(:govuk_date) %>
   </strong>
 <% end %>
 
