--- a/app/views/appointment_mailer/missed.text.erb
+++ b/app/views/appointment_mailer/missed.text.erb
@@ -6,10 +6,10 @@ Our records show that your <%= @appointment.type %> appointment was missed.
 Your appointment was scheduled for:
 
 Date:
-<%= @appointment.start_at.to_date.to_s(:govuk_date) %>
+<%= @appointment.start_at.to_date.to_formatted_s(:govuk_date) %>
 
 Time:
-<%= "#{@appointment.start_at.to_time.to_s(:govuk_time)} (#{@appointment.timezone})" %>
+<%= "#{@appointment.start_at.to_time.to_formatted_s(:govuk_time)} (#{@appointment.timezone})" %>
 
 Your phone number:
 <%= @appointment.phone %>
