--- a/app/views/appointment_mailer/bsl_customer_exit_poll.html.erb
+++ b/app/views/appointment_mailer/bsl_customer_exit_poll.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <%= p do %>
-  You recently had a Pension Wise BSL video appointment on <%= @appointment.start_at.to_date.to_s(:govuk_date) %>.
+  You recently had a Pension Wise BSL video appointment on <%= @appointment.start_at.to_date.to_formatted_s(:govuk_date) %>.
 <% end %>
 
 <%= p do %>
