--- a/app/views/appointment_mailer/missed.html.erb
+++ b/app/views/appointment_mailer/missed.html.erb
@@ -14,7 +14,7 @@
   Date:
   <br>
   <strong class="emphasize">
-    <%= @appointment.start_at.to_date.to_s(:govuk_date) %>
+    <%= @appointment.start_at.to_date.to_formatted_s(:govuk_date) %>
   </strong>
 <% end %>
 
@@ -22,7 +22,7 @@
   Time:
   <br>
   <strong class="emphasize">
-    <%= "#{@appointment.start_at.to_time.to_s(:govuk_time)} (#{@appointment.timezone})" %>
+    <%= "#{@appointment.start_at.to_time.to_formatted_s(:govuk_time)} (#{@appointment.timezone})" %>
   </strong>
 <% end %>
 
