--- a/app/views/shared/email/_appointment_details.text.erb
+++ b/app/views/shared/email/_appointment_details.text.erb
@@ -1,8 +1,8 @@
 Date:
-<%= @appointment.start_at.to_date.to_s(:govuk_date) %>
+<%= @appointment.start_at.to_date.to_formatted_s(:govuk_date) %>
 
 Time:
-<%= "#{@appointment.start_at.to_time.to_s(:govuk_time)} (#{@appointment.timezone})" %>
+<%= "#{@appointment.start_at.to_time.to_formatted_s(:govuk_time)} (#{@appointment.timezone})" %>
 
 Appointment lasts:
 Around 60 minutes
