Refresh allocations calendar when changed
When a change is made to an appointment to either its status, guider or
start date/time, anybody viewing the allocations calendar will have
their view refreshed in realtime to see the changes.

--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -19,6 +19,7 @@
   id="AllocationsCalendar"
   class="company-calendar js-calendar t-calendar"
   data-module="allocations-calendar"
+  data-config='{ "userOrganisationId": "<%= current_user.organisation_content_id %>"}'
   data-default-date="<%= Time.zone.now %>"
   data-filter-select-id="filter_guiders">
 </div>
