--- a/app/views/appointments/_personal_details_form.html.erb
+++ b/app/views/appointments/_personal_details_form.html.erb
@@ -91,7 +91,7 @@
     <% unless @appointment.due_diligence? %>
     <%= f.check_box :third_party_booking, class: 't-third-party-booked', label: 'Third party appointment?', data: { target: 'consent' } %>
     <div class="col-md-offset-1" id="consent">
-      <p><strong>This appointment will be delivered to a third party on behalf of the data subject:</strong></p>
+      <p><strong>Pension pot holder details:</strong></p>
       <div class="form-group">
         <%= f.text_field :data_subject_name, autocomplete: false, class: 't-data-subject-name', label: required_label('Name'), placeholder: 'Name' %>
         <% if @appointment.data_subject_age.present? %>
@@ -99,69 +99,6 @@
         <% end %>
         <p><strong>Date of birth</strong></p>
         <%= render 'data_subject_date_of_birth_field', form: f %>
-      </div>
-
-      <%= f.check_box :data_subject_consent_obtained, class: 't-data-subject-consent-obtained', data: { target: 'data-subject-consent' } %>
-      <div class="col-md-offset-1" id="data-subject-consent">
-        <% if defined?(edit) && edit %>
-          <% if @appointment.data_subject_consent_evidence.attached? %>
-            <%= link_to rails_blob_path(@appointment.data_subject_consent_evidence, disposition: 'attachment'), class: 'btn btn-info t-consent-download' do %>
-              <span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>
-              <span><%= @appointment.data_subject_consent_evidence.filename %></span>
-            <% end %>
-            <hr>
-          <% end %>
-
-          <%= f.file_field :data_subject_consent_evidence, class: 't-data-subject-consent-evidence' %>
-        <% elsif @appointment.rebooked_from_id? && @appointment.rebooked_from.data_subject_consent_evidence.attached? %>
-          <span class="text-info t-copied-evidence">The previously attached evidence will be copied to the new appointment.</span>
-        <% end %>
-      </div>
-
-      <%= f.check_box :power_of_attorney, class: 't-power-of-attorney', data: { target: 'power-of-attorney' } %>
-      <div class="col-md-offset-1" id="power-of-attorney">
-        <% if defined?(edit) && edit %>
-          <% if @appointment.power_of_attorney_evidence.attached? %>
-            <%= link_to rails_blob_path(@appointment.power_of_attorney_evidence, disposition: 'attachment'), class: 'btn btn-info t-power-of-attorney-download' do %>
-              <span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>
-              <span><%= @appointment.power_of_attorney_evidence.filename %></span>
-            <% end %>
-            <hr>
-          <% end %>
-
-          <%= f.file_field :power_of_attorney_evidence %>
-        <% elsif @appointment.rebooked_from_id? && @appointment.rebooked_from.power_of_attorney_evidence.attached? %>
-          <span class="text-info">The previously attached evidence will be copied to the new appointment.</span>
-        <% end %>
-      </div>
-
-      <%= f.check_box :email_consent_form_required, class: 't-email-consent-form-required', data: { target: 'email-consent' } %>
-      <div class="col-md-offset-1" id="email-consent">
-        <%= f.email_field :email_consent, autocomplete: 'off', class: 't-email-consent', label: 'Consent email', placeholder: 'A consent form is sent to this email' %>
-      </div>
-
-      <%= f.check_box :printed_consent_form_required, class: 't-printed-consent-form-required', data: { target: 'printed-consent' } %>
-      <div class="col-md-offset-1" id="printed-consent">
-        <h2 class="h4" data-module="postcode-lookup"
-                       data-postcode-api-key="<%= postcode_api_key %>"
-                       data-lookup-input="#consent-postcode-lookup-input"
-                       data-lookup-button="#consent-postcode-lookup-button"
-                       data-results-container="#consent-postcode-lookup-results-container"
-                       data-output-field-prefix="#appointment_consent"
-                       >Printed consent form address</h2>
-        <div class="form-group form-inline postcode-lookup" id="consent-postcode-lookup">
-          <label for="appointment_summary_lookup">Postcode or address to search for</label><br>
-          <input class="form-control input-md-3 add-right-margin t-printed-consent-form-postcode-lookup" placeholder="Enter postcode or address" type="text" id="consent-postcode-lookup-input" />
-          <button class="btn btn-success btn-sm" onclick="return false" id="consent-postcode-lookup-button">Find UK address</button>
-        </div>
-        <div class="form-group form-inline" id="consent-postcode-lookup-results-container"></div>
-
-        <%= f.text_field :consent_address_line_one, autocomplete: 'off', class: 't-consent-address-line-one', label: 'Building and street', placeholder: 'Address line one' %>
-        <%= f.text_field :consent_address_line_two, autocomplete: 'off', class: 't-consent-address-line-two', use_label: false, placeholder: 'Address line two' %>
-        <%= f.text_field :consent_address_line_three, autocomplete: 'off', class: 't-consent-address-line-three', use_label: false, placeholder: 'Address line three' %>
-        <%= f.text_field :consent_town, autocomplete: 'off', class: 't-consent-town', label: 'Town', placeholder: 'Town' %>
-        <%= f.text_field :consent_county, autocomplete: 'off', class: 't-consent-county', label: 'County (optional)', placeholder: 'County' %>
-        <%= f.text_field :consent_postcode, autocomplete: 'off', class: 't-consent-postcode', label: 'Postcode', placeholder: 'Postcode' %>
       </div>
     </div>
     <% end # unless due diligence %>
