--- a/app/views/appointment_mailer/resource_manager_appointment_cancelled.text.erb
+++ b/app/views/appointment_mailer/resource_manager_appointment_cancelled.text.erb
@@ -1,4 +1,4 @@
-An appointment was cancelled
+An appointment was cancelled <%= '(online)' if @appointment.cancelled_by_customer_online? %>
 
 Reference number:
 <%= @appointment.id %>
