Revert "Change cancellation hints"
This reverts commit ef91bd1409a5acb049b668e7803be92304eea83a.

--- a/app/views/shared/email/_appointment_details.html.erb
+++ b/app/views/shared/email/_appointment_details.html.erb
@@ -78,6 +78,6 @@
   <% end %>
 
   <%= p do %>
-    Call <strong><%= @appointment.telephone %></strong> to change your booking or <strong>reply to this email</strong> to cancel. You may be asked for your booking reference number.
+    Call <strong><%= @appointment.telephone %></strong> to change or cancel your booking.
   <% end %>
 <% end %>
