--- a/app/views/shared/email/_appointment_details.text.erb
+++ b/app/views/shared/email/_appointment_details.text.erb
@@ -31,5 +31,5 @@ Email us if you need this information resent or to change or cancel your booking
 
 If you miss the call, you'll need to book another appointment.
 
-    Call <%= @appointment.telephone %> to change your booking or reply to this email to cancel. You may be asked for your booking reference number.
+Call <%= @appointment.telephone %> to change or cancel your booking.
 <% end %>
