--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -35,6 +35,7 @@
     <ul class="dropdown-menu">
       <%= active_link_to 'Appointment report', new_appointment_report_path, wrap_tag: :li %>
       <%= active_link_to 'Utilisation report', new_utilisation_report_path, wrap_tag: :li %>
+      <%= active_link_to 'Slots report', new_bookable_slot_report_path, wrap_tag: :li %>
     </ul>
   </li>
 <% end %>
