Add a holidays report

--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -36,6 +36,7 @@
       <%= active_link_to 'Appointment report', new_appointment_report_path, wrap_tag: :li %>
       <%= active_link_to 'Utilisation report', new_utilisation_report_path, wrap_tag: :li %>
       <%= active_link_to 'Slots report', new_bookable_slot_report_path, wrap_tag: :li %>
+      <%= active_link_to 'Holiday report', new_holiday_report_path, wrap_tag: :li %>
     </ul>
   </li>
 <% end %>
