--- a/app/views/activities/_sms_confirmation_activity.html.erb
+++ b/app/views/activities/_sms_confirmation_activity.html.erb
@@ -2,6 +2,6 @@
   <span class="glyphicon glyphicon-phone" aria-hidden="true"></span>
   <strong>The system</strong>
   sent an appointment confirmation SMS to
-  <strong><%= sms_confirmation_activity.appointment.mobile %></strong>
+  <strong><%= sms_confirmation_activity.appointment.canonical_sms_number %></strong>
 <% end %>
 <%= render 'activities/activity', activity: sms_confirmation_activity, details: details, hide: hide %>
